--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "portfolio-updated",
+	"name": "faceftw-portfolio",
 	"private": true,
-	"version": "0.0.0",
+	"version": "3.0.0",
 	"type": "module",
 	"scripts": {
 		"start": "vite",
