--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
 		"@radix-ui/react-collapsible": "^1.1.0",
 		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-hover-card": "^1.1.1",
-		"@radix-ui/react-scroll-area": "^1.1.0",
 		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-tooltip": "^1.1.1",
@@ -38,7 +37,7 @@
 		"@types/node": "^20.10.5",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
-		"@vitejs/plugin-react": "^4.2.1",
+		"@vitejs/plugin-react-swc": "^3.7.0",
 		"autoprefixer": "^10.4.19",
 		"postcss": "^8.4.38",
 		"tailwindcss": "^3.4.4",
