--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
 		"lucide-react": "^0.396.0",
 		"react": "^18",
 		"react-dom": "^18",
-		"react-router-dom": "^6.21.1",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
-		"typewriter-effect": "^2.21.0"
+		"typewriter-effect": "^2.21.0",
+		"wouter": "^3.3.5"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.23.7",
