--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
 		"lucide-react": "^0.396.0",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-markdown": "^9.0.1",
+		"react-syntax-highlighter": "^15.5.0",
+		"remark-gfm": "^4.0.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
 		"typewriter-effect": "^2.21.0",
@@ -37,6 +40,7 @@
 		"@types/node": "^20.10.5",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"@types/react-syntax-highlighter": "^15.5.13",
 		"@vitejs/plugin-react-swc": "^3.7.0",
 		"autoprefixer": "^10.4.19",
 		"postcss": "^8.4.38",
