--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"react-markdown": "^9.0.1",
 		"react-syntax-highlighter": "^15.5.0",
 		"remark-gfm": "^4.0.0",
+		"remark-images": "^4.0.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
 		"typewriter-effect": "^2.21.0",
