--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,32 @@
 {
-  "hosting": {
-    "public": "dist",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "/#/**",
-        "destination": "/index.html"
-      }
-    ]
-  }
+	"hosting": {
+		"public": "dist",
+		"ignore": [
+			"firebase.json",
+			"**/.*",
+			"**/node_modules/**"
+		],
+		"rewrites": [
+			{
+				"source": "/projects",
+				"destination": "/index.html"
+			},
+			{
+				"source": "/resume",
+				"destination": "/index.html"
+			},
+			{
+				"source": "/about",
+				"destination": "/index.html"
+			},
+			{
+				"source": "/blog",
+				"destination": "/index.html"
+			},
+			{
+				"source": "/blog/*",
+				"destination": "/index.html"
+			}
+		]
+	}
 }
