--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"postcss": "^8.4.38",
 		"tailwindcss": "^3.4.4",
 		"typescript": "^5.3.3",
-		"vite": "^5.0.10"
+		"vite": "^5.0.10",
+		"vite-plugin-inspect": "^0.8.7"
 	}
 }
