make firebase do some of the work for us

--- a/firebase.json
+++ b/firebase.json
@@ -27,6 +27,12 @@
 				"source": "/blog/*",
 				"destination": "/index.html"
 			}
+		],
+		"redirects":[
+			{
+				"regex":"/assets/assets/(.*)",
+				"destination":"/assets/:1"
+			}
 		]
 	}
 }
