Trying something here (#213)
* Trying something here

* Trying another thing

* even more hacking around

* I feared I had to do this...

* Ok but what if I was stupid

* compromise potentially?

* one more hack

* i'm losing my mind

* I'm just doing things randomly at this point

* one last thing before i think of something else

* make firebase do some of the work for us

* fix config

* Doing the hack for now just to get this out the door so I can focus on content.

This long-term fix is a good blog post in itself

* comment out plugin for now

--- a/firebase.json
+++ b/firebase.json
@@ -27,6 +27,13 @@
 				"source": "/blog/*",
 				"destination": "/index.html"
 			}
+		],
+		"redirects":[
+			{
+				"regex":"/assets/assets/(.*)",
+				"destination":"/assets/:1",
+				"type":"301"
+			}
 		]
 	}
 }
