--- a/package.json
+++ b/package.json
@@ -20,34 +20,33 @@
 		"@radix-ui/react-tooltip": "^1.1.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
-		"embla-carousel-autoplay": "^8.2.0",
-		"embla-carousel-react": "^8.2.0",
-		"framer-motion": "^11",
-		"lucide-react": "^0.396.0",
-		"react": "^18",
-		"react-dom": "^18",
+		"embla-carousel-autoplay": "^8.3.0",
+		"embla-carousel-react": "^8.3.0",
+		"framer-motion": "^11.5.5",
+		"lucide-react": "^0.441.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"react-markdown": "^9.0.1",
 		"react-syntax-highlighter": "^15.5.0",
 		"remark-gfm": "^4.0.0",
-		"remark-images": "^4.0.0",
-		"tailwind-merge": "^2.3.0",
+		"remark-images": "^4.1.0",
+		"tailwind-merge": "^2.5.2",
 		"tailwindcss-animate": "^1.0.7",
 		"typewriter-effect": "^2.21.0",
 		"wouter": "^3.3.5"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.23.7",
-		"@biomejs/biome": "1.8.3",
-		"@types/node": "^20.10.5",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
+		"@babel/core": "^7.25.2",
+		"@biomejs/biome": "1.9.2",
+		"@types/node": "^20.16.5",
+		"@types/react": "^18.3.7",
+		"@types/react-dom": "^18.3.0",
 		"@types/react-syntax-highlighter": "^15.5.13",
 		"@vitejs/plugin-react-swc": "^3.7.0",
-		"autoprefixer": "^10.4.19",
-		"postcss": "^8.4.38",
-		"tailwindcss": "^3.4.4",
-		"typescript": "^5.3.3",
-		"vite": "^5.0.10",
-		"vite-plugin-inspect": "^0.8.7"
+		"autoprefixer": "^10.4.20",
+		"postcss": "^8.4.47",
+		"tailwindcss": "^3.4.12",
+		"typescript": "^5.6.2",
+		"vite": "^5.4.6"
 	}
 }
