--- a/old/tsconfig.json
+++ b/old/tsconfig.json
@@ -28,7 +28,7 @@
 	},
 	"include": [
 		"src"
-	],
+, "../src/components/ProjectCarouselCard.tsx"	],
 	"references": [
 		{
 			"path": "./tsconfig.node.json"
