--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "framer-motion": "^11.11.9",
     "lucide-react": "^0.453.0",
     "next": "^15",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.4",
