--- a/package.json
+++ b/package.json
@@ -20,17 +20,25 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@shikijs/rehype": "^1.22.2",
     "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.11.9",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.453.0",
     "next": "^15",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-html": "^16.0.1",
+    "remark-rehype": "^11.1.1",
+    "shiki": "^1.22.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "typewriter-effect": "^2.21.0"
