--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@shikijs/rehype": "^1.22.2",
     "@types/mdx": "^2.0.13",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -29,12 +30,16 @@
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.11.9",
     "gray-matter": "^4.0.3",
+    "image-size": "^1.1.1",
     "lucide-react": "^0.453.0",
     "next": "^15",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-syntax-highlighter": "^15.6.1",
     "rehype-highlight": "^7.0.1",
+    "rehype-mdx-code-props": "^3.0.1",
+    "rehype-starry-night": "^2.2.0",
     "rehype-stringify": "^10.0.1",
     "remark": "^15.0.1",
     "remark-frontmatter": "^5.0.0",
