--- a/package.json
+++ b/package.json
@@ -1,64 +1,56 @@
 {
-  "name": "portfolio-website",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@mdx-js/loader": "^3.1.0",
-    "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15",
-    "@radix-ui/react-accordion": "^1.2.1",
-    "@radix-ui/react-collapsible": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-hover-card": "^1.1.2",
-    "@radix-ui/react-navigation-menu": "^1.2.1",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.3",
-    "@shikijs/rehype": "^1.22.2",
-    "@types/mdx": "^2.0.13",
-    "@types/react-syntax-highlighter": "^15.5.13",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "embla-carousel-autoplay": "^8.3.0",
-    "embla-carousel-react": "^8.3.0",
-    "framer-motion": "^11.11.9",
-    "gray-matter": "^4.0.3",
-    "image-size": "^1.1.1",
-    "lucide-react": "^0.453.0",
-    "next": "^15",
-    "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-syntax-highlighter": "^15.6.1",
-    "rehype-highlight": "^7.0.1",
-    "rehype-mdx-code-props": "^3.0.1",
-    "rehype-starry-night": "^2.2.0",
-    "rehype-stringify": "^10.0.1",
-    "remark": "^15.0.1",
-    "remark-frontmatter": "^5.0.0",
-    "remark-gfm": "^4.0.0",
-    "remark-html": "^16.0.1",
-    "remark-rehype": "^11.1.1",
-    "shiki": "^1.22.2",
-    "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7",
-    "typewriter-effect": "^2.21.0"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "cross-env": "^7.0.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "portfolio-website",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@radix-ui/react-accordion": "^1.2.1",
+		"@radix-ui/react-collapsible": "^1.1.1",
+		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-hover-card": "^1.1.2",
+		"@radix-ui/react-navigation-menu": "^1.2.1",
+		"@radix-ui/react-separator": "^1.1.0",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-tooltip": "^1.1.3",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
+		"embla-carousel-autoplay": "^8.3.0",
+		"embla-carousel-react": "^8.3.0",
+		"framer-motion": "^11.11.9",
+		"gray-matter": "^4.0.3",
+		"lucide-react": "^0.453.0",
+		"next": "^15",
+		"next-themes": "^0.3.0",
+		"react": "^18",
+		"react-dom": "^18",
+		"rehype-highlight": "^7.0.1",
+		"rehype-stringify": "^10.0.1",
+		"remark": "^15.0.1",
+		"remark-frontmatter": "^5.0.0",
+		"remark-gfm": "^4.0.0",
+		"remark-html": "^16.0.1",
+		"remark-rehype": "^11.1.1",
+		"tailwind-merge": "^2.5.4",
+		"tailwindcss-animate": "^1.0.7",
+		"typewriter-effect": "^2.21.0"
+	},
+	"devDependencies": {
+		"@mdx-js/loader": "^3.1.0",
+		"@mdx-js/react": "^3.1.0",
+		"@next/mdx": "^15",
+		"@types/mdx": "^2.0.13",
+		"@biomejs/biome": "^1.9.4",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5"
+	}
 }
