--- a/package.json
+++ b/package.json
@@ -35,17 +35,18 @@
 		"remark-frontmatter": "^5.0.0",
 		"remark-gfm": "^4.0.0",
 		"remark-html": "^16.0.1",
+		"remark-mdx-frontmatter": "^5.0.0",
 		"remark-rehype": "^11.1.1",
 		"tailwind-merge": "^2.5.4",
 		"tailwindcss-animate": "^1.0.7",
 		"typewriter-effect": "^2.21.0"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "^1.9.4",
 		"@mdx-js/loader": "^3.1.0",
 		"@mdx-js/react": "^3.1.0",
 		"@next/mdx": "^15",
 		"@types/mdx": "^2.0.13",
-		"@biomejs/biome": "^1.9.4",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
