--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"@mdx-js/loader": "^3.1.0",
 		"@mdx-js/react": "^3.1.0",
 		"@next/mdx": "^15",
+		"@tailwindcss/typography": "^0.5.15",
 		"@types/mdx": "^2.0.13",
 		"@types/node": "^20",
 		"@types/react": "^18",
