--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
           channelId: live
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: dist
+          path: out
 
   github-pages:
     name: GitHub Pages
