--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-accordion": "^1.2.1",
-		"@radix-ui/react-collapsible": "^1.1.1",
-		"@radix-ui/react-dialog": "^1.1.2",
-		"@radix-ui/react-hover-card": "^1.1.2",
 		"@radix-ui/react-navigation-menu": "^1.2.1",
 		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
@@ -22,16 +19,13 @@
 		"date-fns": "^4.1.0",
 		"embla-carousel-autoplay": "^8.3.0",
 		"embla-carousel-react": "^8.3.0",
-		"framer-motion": "^11.11.9",
 		"gray-matter": "^4.0.3",
-		"image-size": "^1.1.1",
 		"lucide-react": "^0.453.0",
 		"next": "^15",
 		"next-themes": "^0.3.0",
 		"react": "^18",
 		"react-dom": "^18",
 		"rehype-highlight": "^7.0.1",
-		"rehype-stringify": "^10.0.1",
 		"remark": "^15.0.1",
 		"remark-frontmatter": "^5.0.0",
 		"remark-gfm": "^4.0.0",
@@ -39,8 +33,7 @@
 		"remark-mdx-frontmatter": "^5.0.0",
 		"remark-rehype": "^11.1.1",
 		"tailwind-merge": "^2.5.4",
-		"tailwindcss-animate": "^1.0.7",
-		"typewriter-effect": "^2.21.0"
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
