--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,37 @@
 			"firebase.json",
 			"**/.*",
 			"**/node_modules/**"
+		],
+		"cleanUrls": true,
+		"rewrites": [
+			{
+				"source": "/about",
+				"destination": "./about.html"
+			},
+			{
+				"source": "/blog",
+				"destination": "./blog.html"
+			},
+			{
+				"source": "/blog/0001",
+				"destination": "./blog/0001.html"
+			},
+			{
+				"source": "/blog/0002",
+				"destination": "./blog/0002.html"
+			},
+			{
+				"source": "/blog/0003",
+				"destination": "./blog/0003.html"
+			},
+			{
+				"source": "/projects",
+				"destination": "./projects.html"
+			},
+			{
+				"source": "/resume",
+				"destination": "./resume.html"
+			}
 		]
 	}
 }
