--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,16 +47,23 @@ jobs:
         run: npm install --frozen-lockfile
       - name: Run Build
         run: npm run build
-      - name: Deploy to Firebase
-        uses: FirebaseExtended/action-hosting-deploy@v0
+      - uses: cloudflare/pages-action@v1
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PORTFOLIO_WEB_1CC78 }}'
-          projectId: portfolio-web-1cc78
-          channelId: live
-      - uses: actions/upload-pages-artifact@v3
-        with:
-          path: out
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          projectName: ${{ secrets.CLOUDFLARE_PROJECT_NAME}}
+          directory: out
+          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Deploy to Firebase
+      #   uses: FirebaseExtended/action-hosting-deploy@v0
+      #   with:
+      #     repoToken: '${{ secrets.GITHUB_TOKEN }}'
+      #     firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PORTFOLIO_WEB_1CC78 }}'
+      #     projectId: portfolio-web-1cc78
+      #     channelId: live
+      # - uses: actions/upload-pages-artifact@v3
+      #   with:
+      #     path: out
 
   github-pages:
     name: GitHub Pages
