One More for the fans

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: pages deploy out --project-name=$${{ secrets.CLOUDFLARE_PROJECT_NAME }}
+          command: pages deploy out --project-name=${{ secrets.CLOUDFLARE_PROJECT_NAME }}
       - uses: actions/upload-pages-artifact@v3
         with:
           path: out
