--- a/package.json
+++ b/package.json
@@ -1,54 +1,54 @@
 {
-	"name": "portfolio-website",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build -d",
-		"start": "next start",
-		"lint": "next lint",
-		"postbuild": "next-sitemap"
-	},
-	"dependencies": {
-		"@radix-ui/react-accordion": "^1.2.1",
-		"@radix-ui/react-navigation-menu": "^1.2.1",
-		"@radix-ui/react-separator": "^1.1.0",
-		"@radix-ui/react-slot": "^1.1.0",
-		"@radix-ui/react-tooltip": "^1.1.3",
-		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.1.1",
-		"date-fns": "^4.1.0",
-		"embla-carousel-autoplay": "^8.3.0",
-		"embla-carousel-react": "^8.3.0",
-		"gray-matter": "^4.0.3",
-		"lucide-react": "^0.453.0",
-		"next": "^15",
-		"next-themes": "^0.3.0",
-		"react": "^18",
-		"react-dom": "^18",
-		"rehype-highlight": "^7.0.1",
-		"remark": "^15.0.1",
-		"remark-frontmatter": "^5.0.0",
-		"remark-gfm": "^4.0.0",
-		"remark-html": "^16.0.1",
-		"remark-mdx-frontmatter": "^5.0.0",
-		"remark-rehype": "^11.1.1",
-		"tailwind-merge": "^2.5.4",
-		"tailwindcss-animate": "^1.0.7"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "^1.9.4",
-		"@mdx-js/loader": "^3.1.0",
-		"@mdx-js/react": "^3.1.0",
-		"@next/mdx": "^15",
-		"@tailwindcss/typography": "^0.5.15",
-		"@types/mdx": "^2.0.13",
-		"@types/node": "^20",
+  "name": "portfolio-website",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build -d",
+    "start": "next start",
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
+  },
+  "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "embla-carousel-autoplay": "^8.3.0",
+    "embla-carousel-react": "^8.3.0",
+    "gray-matter": "^4.0.3",
+    "lucide-react": "^0.453.0",
+    "next": "15.1.2",
+    "next-themes": "^0.3.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "rehype-highlight": "^7.0.1",
+    "remark": "^15.0.1",
+    "remark-frontmatter": "^5.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-html": "^16.0.1",
+    "remark-mdx-frontmatter": "^5.0.0",
+    "remark-rehype": "^11.1.1",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "15.1.2",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/mdx": "^2.0.13",
+    "@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
-		"next-sitemap": "^4.2.3",
-		"postcss": "^8",
-		"tailwindcss": "^3.4.1",
-		"typescript": "^5"
-	}
+    "next-sitemap": "^4.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
+  }
 }
