--- a/package.json
+++ b/package.json
@@ -41,14 +41,15 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "15.2.4",
+    "@tailwindcss/postcss": "^4.0.17",
     "@tailwindcss/typography": "^0.5.16",
     "@types/mdx": "^2.0.13",
     "@types/node": "^22",
-	"@types/react": "^19",
-	"@types/react-dom": "^19",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "next-sitemap": "^4.2.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.0.17",
     "typescript": "^5"
   }
 }
