--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@biomejs/biome": "^1.9.4",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
+    "@next/bundle-analyzer": "^15.3.1",
     "@next/mdx": "15.3.1",
     "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/typography": "^0.5.16",
@@ -47,6 +48,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "next-compose-plugins": "^2.2.1",
     "next-sitemap": "^4.2.3",
     "postcss": "^8",
     "tailwindcss": "^4.1.4",
