--- a/package.json
+++ b/package.json
@@ -10,20 +10,21 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
-    "@radix-ui/react-accordion": "^1.2.3",
-    "@radix-ui/react-navigation-menu": "^1.2.5",
+    "@radix-ui/react-accordion": "^1.2.8",
+    "@radix-ui/react-navigation-menu": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-tooltip": "^1.1.8",
+    "@radix-ui/react-tooltip": "^1.2.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "gray-matter": "^4.0.3",
-    "lucide-react": "^0.501.0",
+    "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
+    "preact": "^10.26.5",
     "react": "^19",
     "react-dom": "^19",
     "rehype-highlight": "^7.0.2",
@@ -34,7 +35,7 @@
     "remark-mdx-frontmatter": "^5.1.0",
     "remark-rehype": "^11.1.2",
     "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "1.2.5"
+    "tw-animate-css": "1.2.8"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
