--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@astrojs/mdx": "^4.2.4",
     "@astrojs/react": "^4.2.4",
+    "@floating-ui/dom": "^1.6.13",
+    "@lucide/astro": "^0.503.0",
     "@radix-ui/react-accordion": "^1.2.7",
     "@radix-ui/react-navigation-menu": "^1.2.9",
     "@radix-ui/react-separator": "^1.1.4",
