--- a/package.json
+++ b/package.json
@@ -21,20 +21,13 @@
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "gray-matter": "^4.0.3",
-    "lucide-react": "^0.507.0",
+    "lucide-react": "^0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "react": "^19",
     "react-dom": "^19",
-    "rehype-highlight": "^7.0.2",
-    "remark": "^15.0.1",
-    "remark-frontmatter": "^5.0.0",
-    "remark-gfm": "^4.0.1",
-    "remark-html": "^16.0.1",
-    "remark-mdx-frontmatter": "^5.1.0",
-    "remark-rehype": "^11.1.2",
-    "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "1.2.9"
+    "tailwind-merge": "^3.3",
+    "tw-animate-css": "^1.3"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
@@ -42,7 +35,9 @@
     "@mdx-js/react": "^3.1.0",
     "@next/bundle-analyzer": "^15.3.2",
     "@next/mdx": "15.3.2",
-    "@tailwindcss/postcss": "^4.1.5",
+    "@shikijs/rehype": "^3.4.2",
+    "@shikijs/themes": "^3.4.2",
+    "@tailwindcss/postcss": "^4.1.7",
     "@tailwindcss/typography": "^0.5.16",
     "@types/mdx": "^2.0.13",
     "@types/node": "^22",
@@ -51,7 +46,15 @@
     "next-compose-plugins": "^2.2.1",
     "next-sitemap": "^4.2.3",
     "postcss": "^8",
-    "tailwindcss": "^4.1.5",
+    "remark": "^15.0",
+    "remark-frontmatter": "^5.0",
+    "remark-gfm": "^4.0",
+    "remark-html": "^16.0",
+    "remark-mdx-frontmatter": "^5.1",
+    "remark-rehype": "^11.1",
+    "rehype-stringify": "10.0.1",
+    "shiki": "^3.4.2",
+    "tailwindcss": "^4.1.7",
     "typescript": "^5"
   }
 }
