--- a/package.json
+++ b/package.json
@@ -10,51 +10,51 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
-    "@radix-ui/react-accordion": "^1.2.10",
-    "@radix-ui/react-navigation-menu": "^1.2.12",
-    "@radix-ui/react-separator": "^1.1.6",
-    "@radix-ui/react-slot": "^1.2.2",
-    "@radix-ui/react-tooltip": "^1.2.6",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "embla-carousel-autoplay": "^8.5.2",
-    "embla-carousel-react": "^8.5.2",
-    "gray-matter": "^4.0.3",
-    "lucide-react": "^0",
-    "next": "15.3.2",
-    "next-themes": "^0.4.6",
-    "react": "^19",
-    "react-dom": "^19",
-    "tailwind-merge": "^3.3",
-    "tw-animate-css": "^1.3"
+    "@radix-ui/react-accordion": "1.2.11",
+    "@radix-ui/react-navigation-menu": "1.2.13",
+    "@radix-ui/react-separator": "1.1.7",
+    "@radix-ui/react-slot": "1.2.3",
+    "@radix-ui/react-tooltip": "1.2.7",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "date-fns": "4.1.0",
+    "embla-carousel-autoplay": "8.6.0",
+    "embla-carousel-react": "8.6.0",
+    "gray-matter": "4.0.3",
+    "lucide-react": "0.511.0",
+    "next": "15.3.3",
+    "next-themes": "0.4.6",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "tailwind-merge": "3.3.0",
+    "tw-animate-css": "1.3.2"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@mdx-js/loader": "^3.1.0",
-    "@mdx-js/react": "^3.1.0",
-    "@next/bundle-analyzer": "^15.3.2",
-    "@next/mdx": "15.3.2",
-    "@shikijs/rehype": "^3.4.2",
-    "@shikijs/themes": "^3.4.2",
-    "@tailwindcss/postcss": "^4.1.7",
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/mdx": "^2.0.13",
-    "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "next-compose-plugins": "^2.2.1",
-    "next-sitemap": "^4.2.3",
-    "postcss": "^8",
-    "remark": "^15.0",
-    "remark-frontmatter": "^5.0",
-    "remark-gfm": "^4.0",
-    "remark-html": "^16.0",
-    "remark-mdx-frontmatter": "^5.1",
-    "remark-rehype": "^11.1",
+    "@biomejs/biome": "1.9.4",
+    "@mdx-js/loader": "3.1.0",
+    "@mdx-js/react": "3.1.0",
+    "@next/bundle-analyzer": "15.3.3",
+    "@next/mdx": "15.3.3",
+    "@shikijs/rehype": "3.4.2",
+    "@shikijs/themes": "3.4.2",
+    "@tailwindcss/postcss": "4.1.8",
+    "@tailwindcss/typography": "0.5.16",
+    "@types/mdx": "2.0.13",
+    "@types/node": "22.15.26",
+    "@types/react": "19.1.6",
+    "@types/react-dom": "19.1.5",
+    "next-compose-plugins": "2.2.1",
+    "next-sitemap": "4.2.3",
+    "postcss": "8.5.4",
+    "remark": "15.0.1",
+    "remark-frontmatter": "5.0.0",
+    "remark-gfm": "4.0.1",
+    "remark-html": "16.0.1",
+    "remark-mdx-frontmatter": "5.1.0",
+    "remark-rehype": "11.1.2",
     "rehype-stringify": "10.0.1",
-    "shiki": "^3.4.2",
-    "tailwindcss": "^4.1.7",
-    "typescript": "^5"
+    "shiki": "3.4.2",
+    "tailwindcss": "4.1.8",
+    "typescript": "5.8.3"
   }
 }
