--- a/package.json
+++ b/package.json
@@ -8,30 +8,32 @@
 		"build": "eleventy"
 	},
 	"dependencies": {
-		"tw-animate-css": "1.3.2",
-		"@11ty/eleventy": "3.1.2"
+		"@11ty/eleventy": "3.1.2",
+		"tw-animate-css": "1.3.2"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2",
-		"@mdx-js/loader": "3.1.0",
+		"@11ty/eleventy-img": "^6",
 		"@11ty/eleventy-navigation": "^0.3",
 		"@11ty/eleventy-plugin-rss": "^2",
-		"@11ty/eleventy-img": "^6",
+		"@biomejs/biome": "^2",
+		"@mdx-js/loader": "3.1.0",
+		"@shikijs/langs": "^3.7.0",
+		"@shikijs/markdown-it": "^3.7.0",
 		"@shikijs/rehype": "3.4.2",
 		"@shikijs/themes": "3.4.2",
+		"@tailwindcss/cli": "4.1.11",
 		"@tailwindcss/postcss": "4.1.8",
 		"@tailwindcss/typography": "0.5.16",
-		"@tailwindcss/cli": "4.1.11",
 		"@types/mdx": "2.0.13",
 		"@types/node": "22.15.26",
 		"postcss": "8.5.4",
+		"rehype-stringify": "10.0.1",
 		"remark": "15.0.1",
 		"remark-frontmatter": "5.0.0",
 		"remark-gfm": "4.0.1",
 		"remark-html": "16.0.1",
 		"remark-mdx-frontmatter": "5.1.0",
 		"remark-rehype": "11.1.2",
-		"rehype-stringify": "10.0.1",
 		"shiki": "3.4.2",
 		"tailwindcss": "4.1.8",
 		"typescript": "5.8.3"
