--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
 		"@tailwindcss/cli": "4.1.11",
 		"@tailwindcss/postcss": "4.1.11",
 		"@tailwindcss/typography": "0.5.16",
-		"@types/mdx": "2.0.13",
-		"@types/node": "22.15.26",
+		"@types/node": "24.0.10",
+		"luxon": "3.6.1",
+		"markdown-it": "14.1.0",
+		"markdown-it-container": "4",
 		"postcss": "8.5.6",
 		"shiki": "3.7.0",
 		"tailwindcss": "4.1.11",
